Adding GParted & Small tweaks to the site

--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -188,7 +188,7 @@ html(lang="en")
 							a(href='http://www.ipfire.org/') http://www.ipfire.org/
 
 						.distro#mint
-							h3 LinuxMint
+							h3 LinuxMint (Official Mirror)
 							h5 ISOs:
 							a(href='./linuxmint/iso/') http://mirror.clarkson.edu/linuxmint/iso/
 							br
