--- a/pug/index.pug
+++ b/pug/index.pug
@@ -54,7 +54,7 @@ html(lang="en")
 				h2 History
 				p.
 					The newest iteration was completed in April 2016, but we have had Mirror
-					running for almost a decade now. If you want to learn more about the newest
+					running since 2002. If you want to learn more about the newest
 					iteration or the history behind the project, Visit the #[a(href="history.html") History] page.
 
 		include ../includes/_footer.pug
