--- a/pug/software.pug
+++ b/pug/software.pug
@@ -61,9 +61,23 @@ html(lang="en")
 					a(href="http://kernel.org") http://kernel.org
 
 				section
+					h3 Gparted
+					h5 HTTP:
+					a(href="./gparted/") http://mirror.clarkson.edu/gparted
+					br
+					br
+
+					h5 Upstream Mirror:
+					a(href="https://sourceforge.net/projects/gparted/files/") https://sourceforge.net/projects/gparted/files/
+					br
+
+					h5 Homepage:
+					a(href="http://gparted.org/") http://gparted.org/
+
+				section
 					h3 Extra Packages for Enterprise Linux (EPEL)
 					h5 HTTP:
-					a(href="./fedora-epel/") http:://mirror.clarkson.edu/fedora-epel/
+					a(href="./fedora-epel/") http://mirror.clarkson.edu/fedora-epel/
 					br
 
 					h5 Rsync:
