--- a/includes/_footer.pug
+++ b/includes/_footer.pug
@@ -2,16 +2,6 @@
 footer
   .container
     .row
-      .col.col--2-of-4
-        h3
-          a(href="http://cslabs.clarkson.edu") Clarkson Open Source Institute
-        h3 Clarkson University | Science Center 336
-      .col.col--2-of-4
-        h3 Contact
-        p: a(href="mailto:newmanre@clarkson.edu") newmanre@clarkson.edu
-    .row
-      .col.col--1-of-3.col--push-1-of-3
-        p Design by Benjamin Lannon
-        p
-          i.fa.fa-github
-          a(href="https://github.com/COSI-Lab/Mirror2016") Github Repo
+      .col.col--4-of-4
+        h4.
+          #[a(href="http://cosi.clarkson.edu") Clarkson Open Source Institute] | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu
