--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,16 +1,30 @@
 // Styles for the footer
 footer {
 	background-color: $darker-green;
-	box-shadow: 0 2px 4px $black;
 	color: $white;
-	height: 220px;
+	height: 50px;
 	width: 100%;
 	z-index: 2;
+
+	h4 {
+		margin: 0;
+	}
 
 	.container {
 		margin: 0 auto;
 		max-width: 960px;
 		padding-top: 1px;
+
+		.row {
+			margin-bottom: 0;
+			height: 100%;
+			.col {
+				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+		}
 	}
 
 	a {
@@ -28,8 +42,10 @@ footer {
 	}
 }
 
-@media (max-width: 900px) {
+@media (max-width: 500px) {
 	footer {
-		height: 250px;
+		h4 {
+			font-size: 12px;
+		}
 	}
 }
