Switched to cosi-nav 2

--- a/includes/_mainHeadTags.pug
+++ b/includes/_mainHeadTags.pug
@@ -1,4 +1,3 @@
-script(src="js/vendors/webcomponents.min.js")
 link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 link(rel="stylesheet" type="text/css" href="css/main.css")
 script(src="js/vendors/jquery-2.1.4.min.js")
@@ -7,4 +6,11 @@ meta(name="theme-color" content="#035245")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 meta(charset="utf-8")
 meta(name="description" content="The website for Clarkson University's Software Mirror")
-link(rel="import" href="components/cosi-nav.html")
+link(rel="stylesheet" href="https://dubsdot.cosi.clarkson.edu/cosi-nav.css")
+script(src="js/fetch.js")
+script(src="js/cosi-nav.js" defer)
+style.
+    :root {
+        --background-color: rgba(255,255,255,0.2);
+        --text-color: white;
+    }
