Adding Odroid packages

--- a/pug/software.pug
+++ b/pug/software.pug
@@ -31,6 +31,7 @@ html(lang="en")
 							li: a(href="#clonezilla") Clonezilla
 							li: a(href="#cygwin") Cygwin
 							li: a(href="#isabelle") Isabelle
+							li: a(href="#odroid") Odroid Packages
 					.col.col--3-of-4.software-section
 						section#gnu
 							h3 GNU Software (Official Mirror)
@@ -211,5 +212,18 @@ html(lang="en")
 						
 							h5 Homepage:
 							a(href="https://isabelle.in.tum.de/") https://isabelle.in.tum.de/
+
+						section#odroid
+							h3 Odroid Packages
+							h5 HTTP:
+							a(href="./odroid/") http://mirror.clarkson.edu/odroid/
+							br
+						
+							h5 Frequency of Updates:
+							| Every 2 days
+							br
+						
+							h5 Homepage:
+							a(href="http://www.hardkernel.com/main/main.php") http://www.hardkernel.com/main/main.php
 
 		include ../includes/_footer.pug
