--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -107,7 +107,7 @@ html(lang="en")
 							br
 							h5 Upstream Mirrors:
 							a(href="http://mirrors.rit.edu") mirrors.rit.edu
-							|	&
+							|	&amp; 
 							a(href="http://cdimage.debian.org") cdimage.debian.org
 							br
 							h5 Homepage:
@@ -154,7 +154,7 @@ html(lang="en")
 							br
 							h5 HTTP:
 							a(href='./gentoo/') http://mirror.clarkson.edu/gentoo/
-							|	&
+							|	amp; 
 							a(href='./gentoo-portage/') http://mirror.clarkson.edu/gentoo-portage/
 							h5 Rsync:
 							| rsync://mirror.clarkson.edu/gentoo
@@ -207,9 +207,9 @@ html(lang="en")
 							br
 							h5 Upstream Mirror:
 							a(href="http://mirror.umd.edu") mirror.umd.edu
-							|	&
+							|	&amp; 
 							a(href="http://packages.linuxmint.com") packages.linuxmint.com
-							|	&
+							|	&amp; 
 							a(href="http://debian.linuxmint.com") debian.linuxmint.com
 							br
 							h5 Homepage:
@@ -368,7 +368,7 @@ html(lang="en")
 							br
 							h5 Upstream Mirror:
 							a(href="http://us.releases.ubuntu.com") us.release.ubuntu.com
-							|	&
+							|	&amp; 
 							a(href="http://us.archive.ubuntu.com") us.archive.ubuntu.com
 							br
 							h5 Homepage:
