--- a/includes/_mixins.pug
+++ b/includes/_mixins.pug
@@ -14,9 +14,9 @@ mixin nav-list
 mixin donut
   svg(width="100" height="100%" viewbox="0 0 42 42" class="donut")
     circle(class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff")
-    circle(class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0" stroke-width="8")
-    circle(class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#606060" stroke-width="8")
-    circle(class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#94CD27" stroke-width="8")
+    circle(class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0")
+    circle(class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent")
+    circle(class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent")
 
 mixin stats-table
   table
@@ -27,7 +27,7 @@ mixin stats-table
       td tx
       td.tx
     tr
-      td \=
+      td =
       td.total
     tr
       td(colspan="2").rate
