--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -46,6 +46,10 @@ html(lang="en")
                         .content
                             h4
                             +stats-table
+                h2 Path to 1PB
+                #pb-container
+                    .progressbar
+                        .progressbar--filled
                 h2 Monthly Stats
                 .graph-container
                     .graph-options
@@ -76,4 +80,5 @@ html(lang="en")
         script(src="js/day.js")
         script(src="js/hour.js")
         script(src="js/updated.js")
+        script(src="js/total.js")
         script(src="js/stats.js")
