Message displaying when Stats started being collected

--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -19,6 +19,7 @@ html(lang="en")
         .content
             .container
                 h1 Statistics
+                p Statistics for this iteration of Mirror have been collected since April 24, 2016.
                 h2 General Statistics
                 h3#updated
                 .grid
