Current Month Estimates added to Month Chart

--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -77,6 +77,7 @@ html(lang="en")
                 p(style="text-align:center; font-size: 80%") MirrorBand V1.1
 
         include ../includes/_footer.pug
+        script(src="js/vendors/moment.min.js")
         script(src="js/month.js")
         script(src="js/day.js")
         script(src="js/hour.js")
