--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -54,20 +54,17 @@ html(lang="en")
                 h2 Monthly Stats
                 .graph-container
                     .graph-options
-                        button.selected Graph
-                        // button Table
+                        | Last 12 Months
                     #month-graph.graph-content
                 h2 Weekly Stats
                 .graph-container
                     .graph-options
-                        button.selected Graph
-                        // button Table
+                        | Last 7 days
                     #week-graph.graph-content
                 h2 Hourly Stats
                 .graph-container
                     .graph-options
-                        button.selected Graph
-                        // button Table
+                        | Last 24 hours
                     #hour-graph.graph-content
                 h2 Distro Usage
                 p View daily bandwidth stats categorized to each repository for distros / software.
