Adding the tables actually

--- a/pug/stats.pug
+++ b/pug/stats.pug
@@ -56,16 +56,19 @@ html(lang="en")
                     .graph-options
                         | Last 12 Months
                     #month-graph.graph-content
+                    #month-table.table-content
                 h2 Weekly Stats
                 .graph-container
                     .graph-options
                         | Last 7 days
                     #week-graph.graph-content
+                    #week-table.table-content
                 h2 Hourly Stats
                 .graph-container
                     .graph-options
                         | Last 24 hours
                     #hour-graph.graph-content
+                    #hour-table.table-content
                 h2 Distro Usage
                 p View daily bandwidth stats categorized to each repository for distros / software.
                 a(href="/distrousage/distrousage_latest.txt") Latest
