--- a/scss/components/_distro.scss
+++ b/scss/components/_distro.scss
@@ -1,6 +1,9 @@
 .distro {
 	border-bottom: 2px solid lighten($black, 80%);
 	padding-bottom: 1em;
+	width: 100%;
+	overflow: hidden;
+	// white-space: pre-wrap;
 
 	h5 {
 		padding-right: 0.25em;
@@ -8,6 +11,14 @@
 
 	&:last-child {
 		border-bottom: 0;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 80%;
+
+		a {
+			text-overflow: ellipsis;
+		}
 	}
 }
 
@@ -23,5 +34,34 @@
 		li {
 			padding: 10px 0;
 		}
+	}
+}
+
+.setup .fa {
+	float: right;
+}
+
+.setup-contents {
+	display: none;
+}
+
+.setup.open .setup-contents {
+	display: block;
+}
+
+.setup-contents span.file {
+	background-color: #F0F0F0;
+	padding: 5px;
+	border-radius: 2px;
+}
+
+.setup-contents pre {
+	display: block;
+	background-color: #F0F0F0;
+	border-left: 5px solid slategray;
+	padding: 10px;
+
+	@media (max-width: 768px) {
+		font-size: 0.6em;
 	}
 }
