Monthly Estimate near top of Stats Page

--- a/css/stats.css
+++ b/css/stats.css
@@ -156,3 +156,10 @@ td {
         display: none;
     }
 }
+
+/*-----------------------------------*/
+
+#month-estimate {
+    text-align: center;
+    padding-top: 20px;
+}
