--- a/pug/index.pug
+++ b/pug/index.pug
@@ -30,20 +30,23 @@ html(lang="en")
 
 				.row.mid
 					.col.col--1-of-3
-						a(href="distributions.html"): img(src="img/debian_logo.svg")
+						.img-container
+							img(src="img/debian_logo.svg")
 						h2 Linux Distros
 						p.
 							We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
 							and many more. Many are official mirrors and the majority are updated 4 times a
 							day from upstream mirrors. Learn more on the #[a(href="distributions.html") Distributions] page.
 					.col.col--1-of-3
-						a(href='./gnu'): img(src="img/gnu.svg")
+						.img-container
+							img(src="img/blender-plain.png")
 						h2 GNU Software
 						p.
-							We also host a large quantity of software maintained by the GNU Project. you can
-							find it on the #[a(href="software.html") Software] page.
+							We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
+							find out more on the #[a(href="software.html") Software] page.
 					.col.col--1-of-3
-						a(href='./linux'): img(src="img/tux.png")
+						.img-container
+							img(src="img/tux.png")
 						h2 Linux Kernel
 						p.
 							Versions of the Linux Kernel (Up to 4.5.X) can also be found on the #[a(href="software.html") Software]
