--- a/pug/index.pug
+++ b/pug/index.pug
@@ -40,7 +40,7 @@ html(lang="en")
 					.col.col--1-of-3
 						.img-container
 							img(src="img/blender-plain.png")
-						h2 GNU Software
+						h2 Software
 						p.
 							We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
 							find out more on the #[a(href="software.html") Software] page.
