--- a/includes/_footer.pug
+++ b/includes/_footer.pug
@@ -4,4 +4,4 @@ footer
     .row
       .col.col--4-of-4
         h4.
-          #[a(href="http://cosi.clarkson.edu") Clarkson Open Source Institute] | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu
+          #[a(href="http://cosi.clarkson.edu") Clarkson Open Source Institute] | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu | #[a(href="https://github.com/COSI-Lab/MirrorWebsite") GitHub Repository]
