Push historical bullets over a little

--- a/css/stats.css
+++ b/css/stats.css
@@ -188,3 +188,9 @@ td {
   margin-bottom: 20px;
   background: white;
 }
+
+/*-----------------------------------*/
+
+.histStats li {
+  margin-left: 20px;
+}
