Updating styling for stats grid

--- a/css/stats.css
+++ b/css/stats.css
@@ -202,7 +202,7 @@ td {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  padding: 10px;
+  padding: 10px 30px;
   box-sizing: border-box;
   max-width: 1800px;
   margin: 0 auto;
